Make maxScore double instead of int